# fuente

./: .ruff.toml  README.md  config2.yaml  example.py  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yaml
docs/: error_handling.md
example/: .env.example  config.toml  config.yaml  config2.yaml  example.py
fuente/: __init__.py  alltogether.py  converter.py  merger.py  merger_provider.py  sources.py
fuente/merger/: base.py  simple.py
fuente/sources/: flat.py  nested.py
src/fuente/: __init__.py  alltogether.py  check_type_provider.py  dict_provider.py  entities.py  error_mode.py  make_loader.py  merger_provider.py  protocols.py  skip_error_provider.py
src/fuente/merger/: base.py  nested.py  simple.py
src/fuente/sources/: argparse.py  dotenv.py  env.py  flat.py  merge_source.py  nested.py  toml.py  yaml.py
